--- a/description_templates.html
+++ b/description_templates.html
@@ -69,8 +69,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-3 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_desc-templates-title">Мои шаблоны</h1>
+                <div class="col-12 l_desc-container">
+                    <h1 class="text-center l_site-title">Мои шаблоны</h1>
                     <div class="l_add-desc d-flex justify-content-center">
                         <div class="l_desc-templates-container">
                             <a href="#  " class="btn btn-inline-custom5 add_desc-templates">Добавить</a>
