--- a/features.html
+++ b/features.html
@@ -19,27 +19,24 @@
     <header class="l_site-header d-lg-flex align-items-lg-center">
         <div class="container p-sm-0 bgg">
             <div class="bgg2"></div>
-            <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
-                <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
+            <nav class="navbar navbar-expand-lg l_header--navbar">
+                <a class="navbar-brand" href="#">
                     <img src="./images/logo.png" alt="">
                 </a>
                 <button class="l-navbar--toggler" type="button"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30"
-                         focusable="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false">
                         <title>Menu</title>
-                        <path stroke="#666" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10"
-                              d="M4 7h22M4 15h22M4 23h22"></path>
+                        <path stroke="#666" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path>
                     </svg>
                 </span>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto l_header--menu text-center">
                         <li class="nav-item l_lang">
-                            <a class="nav-link l_current_lang--ru" href="#">РУС</a><a
-                                class="nav-link l_current_lang--en"
-                                href="#">ENG</a>
+                            <a class="nav-link l_current_lang--ru" href="#">РУС</a><a class="nav-link l_current_lang--en"
+                                                                                      href="#">ENG</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Тарифы</a>
@@ -68,10 +65,10 @@
                     <div class="l_features-vote d-flex justify-content-center">
                         <div class="l_features-vote_container">
                             <form>
-                                <div class="form-group mb-lg-5 mb-3 required">
+                                <div class="form-group required">
                                     <input required type="text" class="form-control custom-field3" placeholder="Email">
                                 </div>
-                                <div class="form-group mb-lg-5 mb-3">
+                                <div class="form-group">
                                     <div class="custom-check-title required">
                                         Выберите наиболее нужные по Вашему мнению фичи
                                     </div>
@@ -103,7 +100,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="form-group mb-lg-5 mb-3">
+                                <div class="form-group ">
                                     <textarea class="form-control custom-control custom-field3" name="name" rows="4"
                                               placeholder="Введите дополнительное описание своей позиции или можете предложить свои"></textarea>
                                 </div>
