--- a/login.html
+++ b/login.html
@@ -19,8 +19,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-3 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center mb-4 l_login-title">Вход в Planarix</h1>
+                <div class="col-12">
+                    <h1 class="l_site-title">Вход в Planarix</h1>
                     <div class="l_registration d-flex justify-content-center">
                         <div class="l_reg-container">
                             <form>
@@ -32,13 +32,13 @@
                                     <input type="password" class="form-control custom-field"
                                            placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-inline-custom text-medium w-100 p-07 p-xxl-3 rounded-medium mb-3">
+                                <button type="submit" class="btn btn-inline-custom">
                                     Войти
                                 </button>
-                                <div class="form-group text-center">
+                                <div class="form-group text-center mb-0">
                                     <a href="#" class="l_login-pass_rec">Забыли пароль?</a>
                                     <p class="mb-2">или</p>
-                                    <a href="#" class="btn btn-inline-custom4 text-medium w-100 p-07 p-xxl-3 rounded-medium mb-3">Зарегистрироваться</a>
+                                    <a href="#" class="btn btn-inline-custom4">Зарегистрироваться</a>
                                 </div>
                             </form>
                         </div>
