--- a/our_tariff.html
+++ b/our_tariff.html
@@ -18,27 +18,24 @@
     <header class="l_site-header d-lg-flex align-items-lg-center">
         <div class="container p-sm-0 bgg">
             <div class="bgg2"></div>
-            <nav class="navbar navbar-expand-lg p-sm-0 pt-sm-5 l_header--navbar">
-                <a class="navbar-brand mr-xl-7 mr-lg-5" href="#">
+            <nav class="navbar navbar-expand-lg l_header--navbar">
+                <a class="navbar-brand" href="#">
                     <img src="./images/logo.png" alt="">
                 </a>
                 <button class="l-navbar--toggler" type="button"
                         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30"
-                         focusable="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 30 30" width="30" height="30" focusable="false">
                         <title>Menu</title>
-                        <path stroke="#666" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10"
-                              d="M4 7h22M4 15h22M4 23h22"></path>
+                        <path stroke="#666" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" d="M4 7h22M4 15h22M4 23h22"></path>
                     </svg>
                 </span>
                 </button>
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav mr-auto l_header--menu text-center">
                         <li class="nav-item l_lang">
-                            <a class="nav-link l_current_lang--ru" href="#">РУС</a><a
-                                class="nav-link l_current_lang--en"
-                                href="#">ENG</a>
+                            <a class="nav-link l_current_lang--ru" href="#">РУС</a><a class="nav-link l_current_lang--en"
+                                                                                      href="#">ENG</a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="#">Тарифы</a>
@@ -67,7 +64,7 @@
                             <h1 class="mb-4">
                                 Выберете <span class="bold">Ваш</span> удобный <span class="bold">тариф</span>
                             </h1>
-                            <p class="mb-sm-5 sub_text">
+                            <p class="sub_text">
                                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
                                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
