--- a/registration.html
+++ b/registration.html
@@ -19,20 +19,20 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-3 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center mb-4 l_reg-title">Регистрация</h1>
+                <div class="col-12">
+                    <h1 class="text-center mb-4 l_site-title">Регистрация</h1>
                     <div class="l_registration d-flex justify-content-center">
                         <div class="l_reg-container">
                             <form>
-                                <div class="form-group mb-4">
+                                <div class="form-group">
                                     <input type="email" class="form-control custom-field"
                                            placeholder="Email">
                                 </div>
-                                <div class="form-group mb-4">
+                                <div class="form-group">
                                     <input type="password" class="form-control custom-field"
                                            placeholder="Password">
                                 </div>
-                                <button type="submit" class="btn btn-inline-custom text-medium w-100 p-07 p-xxl-3 rounded-medium mb-3">Зарегистрироваться</button>
+                                <button type="submit" class="btn btn-inline-custom  p-xxl-3">Зарегистрироваться</button>
                                 <div class="form-group text-center">
                                     <p class="l_reg-user-accept">Регистрируясь, пользователь принимает <a href="#"> Пользовательское
                                         соглашение</a>
@@ -143,6 +143,5 @@
 <!-- /wrapper -->
 <!-- Main JavaScript -->
 <script src="./js/app.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </body>
 </html>
