--- a/add_account.html
+++ b/add_account.html
@@ -69,8 +69,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-4 mt-xxl-5">
-                    <h1 class="text-center l_add-account-title">Добавьте аккаунт Instagram</h1>
+                <div class="col-12">
+                    <h1 class="text-center l_site-title">Добавьте аккаунт Instagram</h1>
                     <h5 class="text-center l_add-account-sub_title">Ваш тариф позволяет добавить до 10 аккаунтов</h5>
                     <div class="l_add-account d-flex justify-content-center">
                         <div class="l_add-account-container w-100">
