--- a/add_description.html
+++ b/add_description.html
@@ -69,8 +69,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_add-desc-title">Добавить шаблон</h1>
+                <div class="col-12">
+                    <h1 class="text-center l_add-desc-title l_site-title">Добавить шаблон</h1>
                     <div class="l_add-desc d-flex justify-content-center">
                         <div class="l_add-desc-container">
                             <form>
