--- a/current_treatment.html
+++ b/current_treatment.html
@@ -68,8 +68,8 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-12 mt-lg-4 mt-xxl-5 mb-lx-5">
-                    <h1 class="text-center l_treatment-title">Обращение № 223245</h1>
+                <div class="col-12">
+                    <h1 class="text-center l_site-title">Обращение № 223245</h1>
                     <div class="l_treatment-container">
                         <div class="l_treatment-message_card">
                             <div class="l_treatment-message_info">
