--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,7 @@
     <main id="l_site-main" class="l_site-main">
         <div class="container">
             <div class="row">
-                <div class="col-xl-4 sidenav d-flex justify-content-center p-0">
+                <div id="sidenav"  class="col-xl-4 sidenav d-flex justify-content-center p-0">
                     <aside class="l_site-sidebar w-100">
                         <div class="l_user-menu--toggle">
                             <i class="icon_sidebar"></i>
