--- a/404.html
+++ b/404.html
@@ -15,6 +15,7 @@
 </head>
 <body class="l_404">
 <div class="wrapper">
+    <div class="l_404-illustration"></div>
     <header class="l_site-header d-lg-flex align-items-lg-center">
         <div class="container p-sm-0 bgg">
             <div class="bgg2"></div>
