--- a/about.html
+++ b/about.html
@@ -117,16 +117,16 @@
                         <div class="d-flex justify-content-center">
                             <div class="l_about-questions_container">
                                 <form>
-                                    <div class="form-group mb-lg-4 mb-5_2">
+                                    <div class="form-group">
                                         <input type="text" class="form-control custom-field3" placeholder="Ваше имя">
                                     </div>
-                                    <div class="form-group mb-lg-4 mb-5_2">
+                                    <div class="form-group ">
                                         <input type="text" class="form-control custom-field3" placeholder="Email">
                                     </div>
-                                    <div class="form-group mb-lg-4 mb-5_2">
+                                    <div class="form-group ">
                                         <textarea class="form-control custom-control custom-field3" name="name" rows="4" placeholder="Ваше соообшение"></textarea>
                                     </div>
-                                    <button type="submit" class="btn btn-inline-custom4 py-3 mb-3 w-100">Отправить</button>
+                                    <button type="submit" class="btn btn-inline-custom4 w-100">Отправить</button>
                                 </form>
                             </div>
                         </div>
