--- a/tariff_pop_up.html
+++ b/tariff_pop_up.html
@@ -117,7 +117,7 @@
     </footer>
     <!-- /footer -->
     <!-- Modal -->
-    <div id="tariff_popup" class="modal fade tariff_popup" aria-modal="true" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="exampleModalLongTitle">
+    <div id="tariff_popup" class="modal fade tariff_popup d-flex align-items-center" aria-modal="true" tabindex="-1" role="dialog" aria-hidden="true" aria-labelledby="exampleModalLongTitle">
         <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
                 <div class="modal-header">
