--- a/about.html
+++ b/about.html
@@ -120,10 +120,13 @@
                                     <div class="form-group">
                                         <input type="text" class="form-control custom-field3" placeholder="Ваше имя">
                                     </div>
-                                    <div class="form-group ">
-                                        <input type="text" class="form-control custom-field3" placeholder="Email">
+                                    <div class="form-group has-error">
+                                        <input type="text" class="form-control custom-field3 is-invalid" placeholder="Email">
+                                        <div class="invalid-feedback">
+                                            Please provide a valid zip.
+                                        </div>
                                     </div>
-                                    <div class="form-group ">
+                                    <div class="form-group">
                                         <textarea class="form-control custom-control custom-field3" name="name" rows="4" placeholder="Ваше соообшение"></textarea>
                                     </div>
                                     <button type="submit" class="btn btn-inline-custom4 w-100">Отправить</button>
