--- a/about.html
+++ b/about.html
@@ -116,12 +116,12 @@
                     <div class="col-12">
                         <div class="d-flex justify-content-center">
                             <div class="l_about-questions_container">
-                                <form>
+                                <form class="">
                                     <div class="form-group">
                                         <input type="text" class="form-control custom-field3" placeholder="Ваше имя">
                                     </div>
                                     <div class="form-group has-error">
-                                        <input type="text" class="form-control custom-field3 is-invalid" placeholder="Email">
+                                        <input type="text" class="form-control custom-field3 is-invalid" placeholder="Email" required>
                                         <div class="invalid-feedback">
                                             Please provide a valid zip.
                                         </div>
