--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="l_site-title">Вход в Planarix</h1>
-                    <div class="l_registration d-flex justify-content-center">
-                        <div class="l_reg-container">
+                    <div class="l_login d-flex justify-content-center">
+                        <div class="l_login-container">
                             <form>
                                 <div class="form-group mb-4">
                                     <input type="email" class="form-control custom-field"
